Fixed background pattern not visible

--- a/assets/style.css
+++ b/assets/style.css
@@ -10,7 +10,7 @@
 body {
   font-family: "Poppins", Sans-serif;
   background-color: #f9f9f9;
-  background-image: url('images/bg-pattern.png');
+  background-image: url('../images/bg-pattern.png');
   background-position: top center;
   margin: 0;
   padding: 60px 24px;
